--- a/src/App.scss
+++ b/src/App.scss
@@ -3,9 +3,18 @@ $danger: #343a40;
 $primary: #cecece80;
 $secondary: #2c2c2ca8;
 
+.content {
+    padding: 2rem;
+}
+
 .list-item-row {
     display: flex;
     gap: 0.5rem;
+
+    &.center {
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .flex-centered {
@@ -28,12 +37,17 @@ $secondary: #2c2c2ca8;
     background-color: $primary;
     color: #fff;
 
-    &.hidden {
+    &.app-hidden {
         visibility: hidden;
     }
-    &.visible {
+    &.app-visible {
         visibility: visible;
     }
+
+    &:disabled {
+        filter: brightness(80%);
+    }
+
     &.success {
         background-color: $success;
         &:hover {
@@ -72,6 +86,10 @@ $secondary: #2c2c2ca8;
         border: 1px solid #ced4da;
         border-radius: 0.25rem;
         transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+        &:disabled {
+            background-color: rgb(236, 236, 236) !important;
+        }
         &:focus {
             color: #495057;
             background-color: #fff;
