--- a/src/App.scss
+++ b/src/App.scss
@@ -9,17 +9,64 @@ $secondary: #2c2c2ca8;
 
 .list-item-row {
     display: flex;
+    width: 100%;
     gap: 0.5rem;
 
     &.center {
         justify-content: center;
         align-items: center;
     }
+
+    &.start {
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
 }
 
 .flex-centered {
     display: flex;
     align-items: center;
+}
+
+.custom-input-group {
+    display: flex;
+    width: 100%;
+    align-items: flex-start;
+
+    input,
+    textarea {
+        font-family: Arial, sans-serif;
+        display: block;
+        width: 100%;
+        padding: 0.375rem 0.75rem;
+        font-size: 1rem;
+        line-height: 1.5;
+        color: #495057;
+        background-color: #fff;
+        background-clip: padding-box;
+        border: 1px solid #ced4da;
+        border-radius: 0.25rem;
+        transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+        &:disabled {
+            background-color: rgb(236, 236, 236) !important;
+        }
+        &:focus {
+            color: #495057;
+            background-color: #fff;
+            border-color: #80bdff;
+            outline: 0;
+            box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+        }
+        &::placeholder {
+            color: #6c757d;
+            opacity: 1;
+        }
+    }
+
+    span {
+        padding: 0 0.5rem;
+    }
 }
 
 .list-item-column {
@@ -29,7 +76,8 @@ $secondary: #2c2c2ca8;
 }
 
 .custom-button {
-    display: block;
+    display: inline-block;
+    position: relative;
     line-height: 1.5;
     font-size: 1rem;
     border: 1px solid lightgray;
@@ -66,45 +114,6 @@ $secondary: #2c2c2ca8;
         &:hover {
             background-color: darken($primary, 5%);
         }
-    }
-}
-
-.custom-input-group {
-    display: flex;
-    width: 100%;
-    align-items: center;
-
-    input {
-        display: block;
-        width: 100%;
-        padding: 0.375rem 0.75rem;
-        font-size: 1rem;
-        line-height: 1.5;
-        color: #495057;
-        background-color: #fff;
-        background-clip: padding-box;
-        border: 1px solid #ced4da;
-        border-radius: 0.25rem;
-        transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-
-        &:disabled {
-            background-color: rgb(236, 236, 236) !important;
-        }
-        &:focus {
-            color: #495057;
-            background-color: #fff;
-            border-color: #80bdff;
-            outline: 0;
-            box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-        }
-        &::placeholder {
-            color: #6c757d;
-            opacity: 1;
-        }
-    }
-
-    span {
-        padding: 0 0.5rem;
     }
 }
 
