--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,12 @@ span.centered {
     }
 }
 
+.list-item-column {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
 .flex-centered {
     display: flex;
     align-items: center;
@@ -38,6 +44,9 @@ span.centered {
     width: 100%;
     align-items: flex-start;
 
+    textarea {
+        min-height: 1.5rem;
+    }
     input,
     textarea {
         font-family: Arial, sans-serif;
@@ -73,12 +82,6 @@ span.centered {
     span {
         padding: 0 0.5rem;
     }
-}
-
-.list-item-column {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
 }
 
 .custom-button {
